# student-performance-prediction

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  app.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
artifacts/: model_metrics.example.json
docs/: linkedin-post.md  project-explanation.md  video-script.md
src/student_performance/: __init__.py  config.py  data.py  predict.py  train.py
static/: style.css
templates/: index.html
tests/: test_app.py  test_predict.py
